--- a/Readme
+++ b/Readme
@@ -1,6 +1,6 @@
 *Esta herramienta digital forma parte del catálogo de herramientas del **Banco Interamericano de Desarrollo**. Puedes conocer más sobre la iniciativa del BID en [code.iadb.org](https://code.iadb.org)*
 
-![](./img/Logo.png)
+![](https://github.com/AyuntamientoVeracruz/App-Puerto-Limpio/blob/master/src/images/Logo2.png)
 
 ### Veracruz Puerto Limpio
 ### DESCRIPCIÓN Y CONTEXTO
@@ -10,7 +10,7 @@ Puerto limpio nace para continuar y reforzar las acciones en materia de prevenci
 La campaña “Porque quiero a Veracruz ¡no tiro basura!”, tiene como objetivo concientizar a la población sobre la importancia de no tirar desechos en las calles.
 Tan sólo en el puerto de Veracruz se generan 650 toneladas de basura diariamente. Por ello, si los residuos no son recolectados y tirados de forma consciente y ordenada, se vuelven una de las principales causas para que ocurran inundaciones.
 
-![](./img/vertequiero.png)
+![](https://github.com/AyuntamientoVeracruz/App-Puerto-Limpio/blob/master/src/icons/vertequiero.png)
 
 ####Objetivo
 Ante este reto, se necesitaba un canal de comunicación a través de la tecnología para poder mejorar el servicio de recolección en el municipio de Veracruz.
@@ -25,7 +25,7 @@ Puerto Limpio pretende que sus usuarios califiquen y comenten sobre las unidades
 ---
 Para comenzar a usar Veracruz Puerto Limpio , solo debes dirigirte a tu plataforma de descargas.
 + Play Store
-Buscar Veracruz Puerto Limpio ![](./img/logo_puerto_limpio.png) y seleccionar Instalar.
+Buscar Veracruz Puerto Limpio ![](https://github.com/AyuntamientoVeracruz/App-Puerto-Limpio/blob/master/src/images/logo_puerto_limpio%403x.png) y seleccionar Instalar.
 Una vez instalado colocas tu correo y contraseña. 
 ¡Listo! Ya puedes disfrutar de esta aplicación. 
 
